--- a/style/style_alfio.css
+++ b/style/style_alfio.css
@@ -140,13 +140,11 @@
 }
 
 .win {
-    height: 606px;
-    width: 850px;
     background-color:rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(12px);
     border-radius: 50px;
     text-align: center;
-    padding: 2.5rem;
+    padding: 3rem 10rem;
 }
 
 .win-container > .win > h2 {
@@ -244,6 +242,11 @@
     transition: 0.3s ease-in-out;
 }
 
+.dark-mode {
+    background-color: black;
+    color: white;
+  }
+
 @keyframes galleggia {
     0% {
         transform: translate(0, 0);
@@ -265,4 +268,14 @@
         align-items: center;
         gap: 1rem;
     }
+
+    .win-card-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+        margin-top: 2.5rem;
+    }
+
 }
