--- a/style/header.css
+++ b/style/header.css
@@ -28,7 +28,6 @@ header {
   position: relative;
   top: 0;
   left: 0;
-  transition: transform 0.5s ease-in-out;
 }
 
 .slide {
@@ -37,7 +36,7 @@ header {
   position: relative;
   border-radius: 30px;
   opacity: 0;
-  transition: opacity 0.2s linear;
+  transition: opacity 1.1s ease-in-out;
 }
 .slide.active {
   opacity: 1;
@@ -532,4 +531,142 @@ header {
   left: 0%;
   transform: translate(0%, 0%);
   z-index: 1;
+}
+
+@media screen and (max-width: 850px) {
+  .elephant {
+    width: 88%;
+  }
+  .slide {
+    height: 62%;
+  }
+
+  /* SLIDE 1 ----------------- */
+
+  #space-station-ipad {
+    width: 80%;
+    position: absolute;
+    top: 1%;
+    left: 20%;
+    transform: translate(0%, 0%);
+  }
+  #space-station {
+    display: none;
+  }
+  #space-bunny-ipad {
+    width: 30%;
+    position: absolute;
+    top: -22%;
+    left: 54%;
+    transform: translate(25%, 0%);
+    animation: fluttua 7s ease-in-out infinite;
+    z-index: 10;
+  }
+  #space-bunny {
+    display: none;
+  }
+  /* SLIDE 2 ----------------------- */
+
+  .slide2 .caption h2 {
+    font-size: 25px;
+    text-shadow: none;
+  }
+  .slide2 .caption p {
+    width: 85%;
+    text-shadow: 1px 5px 20px rgba(0, 0, 0, 0.4);
+  }
+  #slide2-bunny-ipad {
+    width: 28%;
+    position: absolute;
+    top: -7%;
+    left: 63%;
+    transform: translate(33%, 0%);
+  }
+  #slide2-bunny {
+    display: none;
+  }
+  /* SLIDE 3 ----------------------- */
+  .slide3 .caption {
+    top: 20%;
+    left: 0.5%;
+    transform: translate(5%, 0%);
+  }
+  .slide3 .caption h2 {
+    font-size: 25px;
+    text-shadow: 1px 2px 20px rgba(0, 0, 0, 0.4);
+  }
+
+  #baloon-bunny {
+    /* coniglietto blu */
+    width: 38%;
+    top: -36%;
+    left: 65%;
+  }
+  #star1 {
+    top: 70%;
+    left: 33%;
+    width: 8.5%;
+  }
+  #star2 {
+    top: 60%;
+    left: 20%;
+    width: 6%;
+  }
+
+  #coin-bottom,
+  #coin-top,
+  .framework-container,
+  .framework-container img,
+  .framework-light {
+    display: none;
+  }
+
+  #purple-webkit {
+    font-size: 24px;
+  }
+
+  /* SLIDE 4 ----------------------- */
+
+  #pancake-logo {
+    width: 18%;
+  }
+  #gm-bunny {
+    width: 120%;
+    top: 55%;
+    left: -20%;
+    transform: translate(0%, -50%);
+  }
+
+  /* SLIDE 5 ----------------------- */
+
+  .slide5 .caption {
+    left: 3.5%;
+  }
+  .slide5 .caption h2 {
+    font-size: 38px;
+    font-weight: 500;
+  }
+  #trading-bunny {
+    width: 54%;
+    left: 55%;
+  }
+
+  /* BUTTONS -------------------- */
+
+  .head-btn {
+    top: 60%;
+    left: 8%;
+    transform: translate(-25%, 10%);
+  }
+  .head-btn2 {
+    top: 60%;
+    left: 23%;
+    transform: translate(-20%, 10%);
+  }
+  .indicators {
+    position: absolute;
+    top: 20%;
+    left: 43%;
+    transform: translate(0%, 0%);
+  }
 }
