--- a/root.css
+++ b/root.css
@@ -1,14 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 :root {
-    --second-color: #7645d9;
-    --h2-light-color: #280d5f;
-    --button-color: #1fc7d4;
-    --navLink-color: #7a6eaa;
-    --paragraf-color: #7a6eaa;
-    --bannerGrad-top: #8051d6;
-    --bannerGrad-bottom: #492286;
-    --third-color: #ffb237;
-    --fourth-color: #bdc2c4;
-    --h2-dark-color: white;
+  --second-color: #7645d9;
+  --h2-light-color: #280d5f;
+  --button-color: #1fc7d4;
+  --navLink-color: #7a6eaa;
+  --paragraf-color: #7a6eaa;
+  --bannerGrad-top: #8051d6;
+  --bannerGrad-bottom: #492286;
+  --third-color: #ffb237;
+  --fourth-color: #bdc2c4;
+  --h2-dark-color: white;
 }
