--- a/style/banner-footer.css
+++ b/style/banner-footer.css
@@ -98,6 +98,11 @@ body img {
 .footer {
   background-color: rgb(40, 39, 39);
   width: 100%;
+  height: 65%;
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  transform: translate(0%, 0%);
 }
 
 .box-footer {
@@ -105,7 +110,7 @@ body img {
   flex-direction: column;
   width: 80%;
   margin: 0 auto;
-  margin-top: 5%;
+  margin-top: 1.5%;
 }
 
 .footer-inside {
@@ -141,8 +146,12 @@ body img {
 
 .footer-social {
   display: flex;
-  width: 500px;
-  gap: 25px;
+  width: 50%;
+  gap: 30px;
+  position: absolute;
+  top: 90%;
+  left: 10%;
+  transform: translate(0%, 0%);
 }
 
 #social {
