--- a/style/banner-footer.css
+++ b/style/banner-footer.css
@@ -149,7 +149,7 @@ body img {
   width: 50%;
   gap: 30px;
   position: absolute;
-  top: 90%;
+  top: 80%;
   left: 10%;
   transform: translate(0%, 0%);
 }
@@ -162,6 +162,10 @@ body img {
   flex-direction: column;
   width: 1200px;
   padding: auto;
+  position: absolute;
+  top: 90%;
+  left: 10%;
+  transform: translate(0%, 0%);
 }
 
 .box-theme {
