--- a/style/styleTrade.css
+++ b/style/styleTrade.css
@@ -141,3 +141,141 @@
 .tradeLink:hover {
     text-decoration: underline;
 }
+
+@media screen and (max-width: 850px) {
+    .trade {
+        height: 33.2rem;
+        width: 53.125rem;
+    }
+
+    .tradeCont {
+        height: 33.2rem;
+        padding: 3rem 0;
+    }
+
+    .tardeContainer {
+        height: 27.2rem;
+        padding: 2rem 1.5rem;
+        margin: 0px;
+    }
+
+    .tradeTextCont {
+        width: 50.125rem;
+        height: 23.2rem;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+
+    .tradeLeftSection {
+        display: flex;
+        flex-direction: column;
+        flex: 1 1 0%;
+        align-self: flex-start;
+        width: 38.43rem;
+        height: 9.7rem;
+    }
+
+    .tradeTitle {
+        font-size: 2rem;
+        width: 38.43rem;
+        height: 2.2rem;
+    }
+
+    .tradeLeftSection p {
+        height: 1.5rem;
+        font-size: 1rem;
+        font-weight: 400;
+    }
+
+    .tradeLink {
+        height: 3rem;
+    }
+
+    .tradeImgCont {
+        height: 12rem;
+        width: 12rem;
+        margin-bottom: 24px;
+        flex-direction: row-reverse;
+    }
+
+    .tradeImgCont div {
+        width: auto;
+        height: auto;
+    }
+
+    .tradeImgCont div > img {
+        width: 12rem;
+        height: 12rem;
+    }
+
+}
+
+@media screen and (max-width: 420px) {
+    .trade {
+        height: 34.89rem;
+        width: auto;
+    }
+
+    .tradeCont {
+        height: 34.9rem;
+        padding: 3rem 0; 
+        width: 24.25rem;
+    }
+
+    .tardeContainer {
+        height: 29.9rem;
+        padding: 1.5rem 1rem;
+        margin: 0px;
+        width: auto;
+    }
+
+    .tradeTextCont {
+        height: 26.9rem;
+        width: 23.25rem;
+       
+    }
+
+    .tradeTextCont div {
+        width: auto;
+    }
+
+    .tradeLeftSection {
+        height: 13.4rem;
+        width: 23.25rem;
+    }
+
+    .tradeTitle {
+        height: 4.4rem;
+        width: auto;
+    }
+
+    .tradeLeftSection p {
+        height: 3rem;
+        width: auto;
+    }
+
+    .tradeLink {
+        height: 3rem;
+        width: auto;
+    }
+
+    .tradeImgCont {
+        height: 12rem;
+        width: 12rem;
+        margin-bottom: 24px;
+        flex-direction: row-reverse;
+    }
+
+    .tradeImgCont div {
+        width: auto;
+        height: auto;
+    }
+
+    .tradeImgCont div > img {
+        width: 12rem;
+        height: 12rem;
+    }
+
+
+}
