--- a/style/styleEarn.css
+++ b/style/styleEarn.css
@@ -186,4 +186,210 @@
     height: 8.25rem;
     width: 100%;
     background-color: blueviolet;
+}@media screen and (max-width: 850px) {
+
+    .earn {
+        height: 42.95rem;
+        width: fit-content;
+    }
+
+    .earnCont {
+        height: 39.95rem;
+    }
+
+    .earnContainer {
+        height: 36.95rem;
+        padding: 2rem 1.5rem;
+        margin: 0px;
+    }
+
+    .earnTextCont {
+        width: 50.125rem;
+        height: 23.2rem;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+
+    .earnLeftSection {
+        display: flex;
+        flex-direction: column;
+        flex: 1 1 0%;
+        align-self: flex-start;
+        width: 38.43rem;
+        height: 9.7rem;
+        margin: 0px;
+    }
+
+    .earnTitle {
+        font-size: 2rem;
+        font-weight: 600;
+        line-height: 1.1;
+        width: 38.43rem;
+        height: 2.2rem;
+    }
+
+
+    .earnLeftSection p {
+        height: 1.5rem;
+        font-size: 1rem;
+        font-weight: 400;
+        margin-bottom: 24px;
+    }
+
+    .earnTextCont div {
+        height: 9.7rem;
+        width: 30.15rem;
+    }
+
+    .earnLink {
+        height: 3rem;
+    }
+
+    .earnImgCont {
+        height: 12rem;
+        width: 12rem;
+        margin-bottom: 24px;
+        flex-direction: row-reverse;
+    }
+
+    .earnImgCont div {
+        width: auto;
+        height: auto;
+    }
+
+    .earnImgCont div > img {
+        width: 12rem;
+        height: 12rem;
+    }
+    
+    .earnCenter > img {
+        width: 11.6875rem;
+    }
+
+    .poolsFarm {
+        margin: 1.5rem;
+        width: 50.125rem;
+        margin-left: 0px;
+    }
+    .topTitle {
+        font-size: 1.25rem;
+        font-weight: 600;
+        line-height: 1.1;
+    }
+
+    .squad, .usdt, .lvl, .bnb, .krs, .stake, .csix, .xcad, .hay, .moni {
+        font-weight: 600;
+        line-height: 1.5;
+        margin-bottom: 0.5rem;
+        font-size: 0.75rem;
+    }
+
+    .elmtsValue {
+        font-weight: 600;
+        line-height: 1.1;
+        font-size: 1rem;
+    }
+
+    .apr {
+        font-weight: 400;
+        line-height: 1.5;
+        font-size: 1rem;
+    }
+
+}
+
+@media screen and (max-width: 420px) {
+    .earnLine {
+        height: 0px;
+        width: 0px;
+    }
+    
+    .earn {
+        height: 54.65rem;
+        width: auto;
+    }
+
+    .earnCont {
+        height: 34.9rem;
+        padding: 3rem 0; 
+        width: auto;
+    }
+
+    .earnContainer {
+        height: 29.9rem;
+        padding: 1.5rem 1rem;
+        margin: 0px;
+        width: auto;
+    }
+
+    .earnTextCont {
+        height: 26.9rem;
+        width: 23.25rem;
+    }
+
+    .earnTextCont div {
+        width: auto;
+    }
+
+
+    .earnLeftSection {
+        height: 13.4rem;
+        width: 23.25rem;
+    }
+
+    .earnTitle {
+        height: 4.4rem;
+        width: 22.25rem;
+    }
+
+    .earnLeftSection p {
+        height: 3rem;
+        width: 23.25rem;
+    }
+
+    .earnLink {
+        height: 3rem;
+        width: auto;
+    }
+
+    .earnImgCont {
+        height: 12rem;
+        width: auto;
+        margin-bottom: 24px;
+        flex-direction: row-reverse;
+    }
+
+    .earnImgCont div {
+        width: auto;
+        height: auto;
+    }
+
+    .earnImgCont div > img {
+        width: 12rem;
+        height: 12rem;
+    }
+
+    .earnButtonLink {
+        height: 3rem;
+    }
+
+    .poolsFarm {
+        margin-top: 2rem;
+        width: 23.25rem;
+        height: 18.25rem;
+        margin-left: 0px;
+    }
+
+    .topTitle {
+        margin-top: 1.5rem;
+    }
+
+    .topCont {
+        height: 15rem;
+    }
+
+    .topFarm {
+        grid-template-columns: repeat(2, auto);
+    }
 }
