--- a/style/header.css
+++ b/style/header.css
@@ -114,10 +114,10 @@ header {
 /* SLIDE 1 */
 
 .slide1 .caption {
-  position: absolute;
+  position: relative;
   top: 10%;
   left: 0%;
-  transform: translate(5%, 0%);
+  transform: translate(2.5%, 0%);
 }
 .slide1 .caption h2 {
   font-size: 45px;
@@ -129,11 +129,14 @@ header {
 }
 #space-station {
   width: 52.7%;
-  position: sticky;
-  top: 0%;
+  position: relative;
+  top: -46%;
   left: 48%;
-  transform: translate(0.15%, 0%);
+  transform: translate(-1%, 0%);
   border-radius: 30px;
+  max-width: 100%;
+  height: 100%;
+  display: block;
 }
 #space-station-ipad,
 #space-bunny-ipad,
@@ -141,13 +144,17 @@ header {
   display: none;
 }
 #space-bunny {
-  width: 20%;
+  width: 50%;
+  max-width: 225px;
+  height: auto;
+  max-height: 300px;
   position: absolute;
   top: -20%;
   left: 65%;
   transform: translate(25%, 0%);
   animation: fluttua 7s ease-in-out infinite;
   z-index: 10;
+  display: block;
 }
 
 /* SLIDE 2 */
@@ -168,11 +175,14 @@ header {
   text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.6);
 }
 #slide2-bunny {
-  width: 26.9%;
+  width: 48%;
   position: absolute;
-  top: -18%;
-  left: 65%;
+  top: -16%;
+  left: 62%;
   transform: translate(25%, 0%);
+  display: block;
+  max-width: 300px;
+  height: 116%;
 }
 
 /* SLIDE 3*/
@@ -193,13 +203,16 @@ header {
 
 #baloon-bunny {
   /* coniglietto blu */
-  width: 26%;
+  width: 40%;
   position: absolute;
   top: -30%;
   left: 73%;
   transform: translate(25%, 0%);
   animation: fluttua 5s ease-in-out infinite;
   z-index: 1;
+  display: block;
+  max-width: 270px;
+  height: auto;
 }
 @keyframes fluttua {
   0% {
@@ -217,9 +230,12 @@ header {
   position: absolute;
   top: 57.4%;
   left: 50%;
-  transform: translate(-140%, 0%);
-  width: 18%;
+  transform: translate(-140%, 27%);
+  width: 160px;
+  max-width: 100%;
+  height: auto;
 }
+
 #coin-top {
   position: absolute;
   top: 0%;
@@ -325,11 +341,14 @@ header {
   transform: translate(0%, -50%);
 }
 #gm-bunny {
-  width: 88%;
+  width: 90%;
   position: absolute;
   top: 50%;
-  left: 12%;
+  left: 10%;
   transform: translate(0%, -50%);
+  display: block;
+  max-width: 100%;
+  height: 120%;
 }
 
 /* SLIDE 5 */
@@ -362,7 +381,10 @@ header {
   position: absolute;
   top: 50%;
   left: 65%;
-  transform: translate(0%, -59%);
+  transform: translate(0%, -58%);
+  display: block;
+  max-width: 100%;
+  height: 120%;
 }
 
 /* BUTTONS */
@@ -545,7 +567,7 @@ header {
     width: 88%;
   }
   .slide {
-    height: 62%;
+    height: 80%;
   }
 
   /* SLIDE 1 ----------------- */
@@ -557,19 +579,25 @@ header {
     left: 16.1%;
     transform: translate(0%, 0%);
     display: initial;
+    max-width: 100%;
+    height: 100%;
+    display: block;
   }
   #space-station {
     display: none;
   }
   #space-bunny-ipad {
-    width: 32%;
+    width: 25%;
     position: absolute;
     top: -25%;
     left: 50%;
     transform: translate(25%, 0%);
     animation: fluttua 7s ease-in-out infinite;
     z-index: 10;
-    display: initial;
+    display: block;
+    max-width: 225px;
+    height: 200px;
+    max-height: 300px;
   }
   #space-bunny {
     display: none;
@@ -590,7 +618,9 @@ header {
     top: -8%;
     left: 61.5%;
     transform: translate(33%, 0%);
-    display: initial;
+    display: block;
+    max-width: 300px;
+    height: 108%;
   }
   #slide2-bunny {
     display: none;
@@ -608,10 +638,13 @@ header {
 
   #baloon-bunny {
     /* coniglietto blu */
-    width: 40%;
+    width: 70%;
     top: -36%;
     left: 63%;
     z-index: 0;
+    display: block;
+    max-width: 250px;
+    height: auto;
   }
   #star1 {
     top: 70%;
@@ -643,9 +676,12 @@ header {
   }
   #gm-bunny {
     width: 120%;
-    top: 56%;
-    left: -20%;
+    top: 55%;
+    left: -0%;
     transform: translate(0%, -50%);
+    display: block;
+    max-width: 100%;
+    height: 108%;
   }
 
   /* SLIDE 5 ----------------------- */
@@ -704,7 +740,7 @@ header {
   }
   .indicators {
     position: absolute;
-    top: 20%;
+    top: 45%;
     left: 43%;
     transform: translate(0%, 0%);
   }
