--- a/style/header.css
+++ b/style/header.css
@@ -50,7 +50,6 @@ header {
   border-radius: 30px;
   height: 100%;
   width: 100%;
-  position: relative;
 }
 .slide2 {
   background: linear-gradient(
@@ -134,9 +133,9 @@ header {
   left: 48%;
   transform: translate(-1%, 0%);
   border-radius: 30px;
+  display: block;
   max-width: 100%;
   height: 100%;
-  display: block;
 }
 #space-station-ipad,
 #space-bunny-ipad,
@@ -175,14 +174,14 @@ header {
   text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.6);
 }
 #slide2-bunny {
-  width: 48%;
-  position: absolute;
-  top: -16%;
+  width: 28%;
+  position: relative;
+  top: -20%;
   left: 62%;
   transform: translate(25%, 0%);
   display: block;
-  max-width: 300px;
-  height: 116%;
+  max-width: 100%;
+  max-height: 120%;
 }
 
 /* SLIDE 3*/
@@ -203,7 +202,7 @@ header {
 
 #baloon-bunny {
   /* coniglietto blu */
-  width: 40%;
+  width: 28%;
   position: absolute;
   top: -30%;
   left: 73%;
@@ -211,8 +210,8 @@ header {
   animation: fluttua 5s ease-in-out infinite;
   z-index: 1;
   display: block;
-  max-width: 270px;
-  height: auto;
+  max-width: 100%;
+  height: 145%;
 }
 @keyframes fluttua {
   0% {
@@ -228,12 +227,13 @@ header {
 
 #coin-bottom {
   position: absolute;
-  top: 57.4%;
+  top: 50.4%;
   left: 50%;
-  transform: translate(-140%, 27%);
-  width: 160px;
+  transform: translate(-140%, 0%);
+  width: 18%;
+  display: block;
   max-width: 100%;
-  height: auto;
+  height: 50%;
 }
 
 #coin-top {
