--- a/style/header.css
+++ b/style/header.css
@@ -5,16 +5,20 @@
   padding: 0;
   box-sizing: border-box;
 }
+body{
+  width: 100%;
+  height: 100%;
+}
 header {
   background-color: #ecf6ff;
   width: 100%;
-  height: 50vh;
+  height: 50%;
   padding-top: 5%;
 }
 .elephant {
   position: relative;
   width: 78%;
-  height: 26.8vh; /*FIRST OVERFLOW*/
+  height: 100%; /*FIRST OVERFLOW*/
   margin: 0 auto;
   z-index: 0;
   overflow: clip;
@@ -24,7 +28,7 @@ header {
 .carousel {
   display: flex;
   width: 500%;
-  height: 100%;
+  height: 200px;
   position: relative;
   top: 0;
   left: 0;
@@ -109,7 +113,18 @@ header {
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke: 0.18rem rgb(101, 50, 205);
 }
-
+.purple-webkit-2{
+  font-weight: 900;
+  font-size: 24px;
+  background: linear-gradient(
+    166.02deg,
+    rgb(255, 178, 55) -5.1%,
+    rgb(255, 235, 55) 75.24%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 /* SLIDE 1 */
 
 .slide1 .caption {
@@ -128,11 +143,11 @@ header {
 }
 #space-station {
   width: 52.7%;
-  position: relative;
-  top: -46%;
-  left: 48%;
+  position: absolute;
+  top: 0%;
+  left: 47.8%;
   transform: translate(-1%, 0%);
-  border-radius: 30px;
+  border-radius: 10px;
   display: block;
   max-width: 100%;
   height: 100%;
@@ -143,8 +158,8 @@ header {
   display: none;
 }
 #space-bunny {
-  width: 50%;
-  max-width: 225px;
+  width: 55%;
+  max-width: 232px;
   height: auto;
   max-height: 300px;
   position: absolute;
@@ -174,14 +189,14 @@ header {
   text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.6);
 }
 #slide2-bunny {
-  width: 28%;
+  width: 25%;
   position: relative;
-  top: -20%;
+  top: -15%;
   left: 62%;
   transform: translate(25%, 0%);
   display: block;
-  max-width: 100%;
   max-height: 120%;
+  height: 115%;
 }
 
 /* SLIDE 3*/
@@ -227,7 +242,7 @@ header {
 
 #coin-bottom {
   position: absolute;
-  top: 50.4%;
+  top: 50%;
   left: 50%;
   transform: translate(-140%, 0%);
   width: 18%;
@@ -398,9 +413,10 @@ header {
   font-weight: 500;
   transition: all 0.1s ease-in-out;
   text-decoration: none;
+  height: 25%;
   position: absolute;
   top: 60%;
-  left: 5%;
+  left: 60px;
   transform: translate(-25%, 10%);
   -webkit-box-shadow: 0px 2px 0px 0px #18a2ac, 5px 5px 15px 5px rgba(0, 0, 0, 0);
   box-shadow: 0px 2px 0px 0px #18a2ac, 5px 5px 15px 5px rgba(0, 0, 0, 0);
@@ -414,9 +430,10 @@ header {
   font-weight: 500;
   transition: all 0.1s ease-in-out;
   text-decoration: none;
+  height: 25%;
   position: absolute;
   top: 60%;
-  left: 15%;
+  left: 180px;
   transform: translate(-20%, 10%);
   -webkit-box-shadow: 0px 2px 0px 0px #c9cdce, 5px 5px 15px 5px rgba(0, 0, 0, 0);
   box-shadow: 0px 2px 0px 0px #c9cdce, 5px 5px 15px 5px rgba(0, 0, 0, 0);
@@ -475,12 +492,13 @@ header {
 .moon {
   background-color: #ebf6ff;
   width: 100%;
-  height: 88vh;
+  height: 100%;
+  position: absolute;
 }
 .moon #astro-bunny {
   width: 40%;
   position: absolute;
-  top: 42%;
+  top: 5%;
   left: 50%;
   transform: translate(0%, 0%);
   animation: fluttua-b 7s ease-in-out infinite;
@@ -501,7 +519,7 @@ header {
 .head-caption {
   width: 40%;
   position: absolute;
-  top: 65%;
+  top: 20%;
   left: 10%;
   transform: translate(0%, 0%);
   z-index: 1000;
@@ -556,18 +574,20 @@ header {
 .round-background {
   width: 100%;
   position: absolute;
-  top: 98%;
+  top: 60%;
   left: 0%;
   transform: translate(0%, 0%);
   z-index: 1;
 }
 
-@media screen and (max-width: 820px) {
+/* ---------------------- MEDIA QUERY ------------------ */
+
+@media (max-width: 820px) {
   .elephant {
     width: 88%;
   }
   .slide {
-    height: 80%;
+    height: 100%;
   }
 
   /* SLIDE 1 ----------------- */
@@ -587,7 +607,8 @@ header {
     display: none;
   }
   #space-bunny-ipad {
-    width: 25%;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: -25%;
     left: 50%;
@@ -596,8 +617,7 @@ header {
     z-index: 10;
     display: block;
     max-width: 225px;
-    height: 200px;
-    max-height: 300px;
+    height: auto;
   }
   #space-bunny {
     display: none;
@@ -638,12 +658,13 @@ header {
 
   #baloon-bunny {
     /* coniglietto blu */
-    width: 70%;
+    width: 100%;
+    height: 100%;
     top: -36%;
-    left: 63%;
+    left: 58%;
     z-index: 0;
     display: block;
-    max-width: 250px;
+    max-width: 300px;
     height: auto;
   }
   #star1 {
@@ -702,11 +723,13 @@ header {
   .moon {
     background-color: #ebf6ff;
     width: 100%;
-    height: 14vh;
+    position: absolute;
+    top: 150px;
+    z-index: -1;
   }
   .moon #astro-bunny {
     width: 32%;
-    top: 37%;
+    top: 44%;
     left: 65%;
   }
   .head-caption {
@@ -720,7 +743,7 @@ header {
   .round-background {
     width: 100%;
     position: absolute;
-    top: 50%;
+    top: 72%;
     left: 0%;
     transform: translate(0%, 0%);
     z-index: 1;
@@ -729,18 +752,20 @@ header {
   /* BUTTONS -------------------- */
 
   .head-btn {
+    position: absolute;
     top: 60%;
-    left: 8%;
+    left: 50px;
     transform: translate(-25%, 10%);
   }
   .head-btn2 {
+    position: absolute;
     top: 60%;
-    left: 23%;
+    left: 160px;
     transform: translate(-20%, 10%);
   }
   .indicators {
     position: absolute;
-    top: 45%;
+    top: 75%;
     left: 43%;
     transform: translate(0%, 0%);
   }
